--- a/FloatingButtonSample/FloatingButtonSample/FloatingButton/FloatingButton.xib
+++ b/FloatingButtonSample/FloatingButtonSample/FloatingButton/FloatingButton.xib
@@ -36,6 +36,9 @@
                                     <integer key="value" value="22"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="centralButtonTapped:" destination="-1" eventType="touchUpInside" id="tiv-Bg-dBv"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.99624770880000002" green="0.94603270289999997" blue="0.94877105949999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
