--- a/FloatingButtonSample/FloatingButtonSample/Floating/FloatingThing.xib
+++ b/FloatingButtonSample/FloatingButtonSample/Floating/FloatingThing.xib
@@ -10,11 +10,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="j94-iy-721">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="66"/>
+            <rect key="frame" x="0.0" y="0.0" width="76" height="76"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NxK-Ks-20C" userLabel="Inside View">
-                    <rect key="frame" x="8" y="3" width="60" height="60"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NxK-Ks-20C" userLabel="Content View">
+                    <rect key="frame" x="8" y="8" width="60" height="60"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:45" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eq-aA-thO">
                             <rect key="frame" x="8" y="8" width="44" height="44"/>
