--- a/FloatingButtonSample/FloatingButtonSample/Floating/FloatingThing.xib
+++ b/FloatingButtonSample/FloatingButtonSample/Floating/FloatingThing.xib
@@ -9,12 +9,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="j94-iy-721">
-            <rect key="frame" x="0.0" y="0.0" width="76" height="76"/>
+        <view contentMode="scaleToFill" id="j94-iy-721" customClass="FloatingThing" customModule="FloatingButtonSample" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="165" height="98"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NxK-Ks-20C" userLabel="Content View">
-                    <rect key="frame" x="8" y="8" width="60" height="60"/>
+                    <rect key="frame" x="8" y="19" width="60" height="60"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:45" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eq-aA-thO">
                             <rect key="frame" x="8" y="8" width="44" height="44"/>
@@ -56,7 +56,10 @@
                 <constraint firstItem="NxK-Ks-20C" firstAttribute="leading" secondItem="j94-iy-721" secondAttribute="leading" constant="8" id="nBh-FD-bks"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="130.43478260869566" y="227.34375"/>
+            <connections>
+                <outlet property="leadingConstraint" destination="nBh-FD-bks" id="fhU-Kc-DBZ"/>
+            </connections>
+            <point key="canvasLocation" x="65.94202898550725" y="234.375"/>
         </view>
     </objects>
 </document>
